$Id$

2012-05-20 Roy Hills <Roy.Hills@nta-monitor.com>

	* get-oui, get-iab: Applied patch from Stuart Henderson at OpenBSD.
	  This allows the -u (alternative URL) option to be correctly handled,
	  and changes the default URLs to the new locations on the IEEE
	  website (the old locations still work, but with a redirect).

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

2011-12-30 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.h, arp-scan.1: If the location of the various
	  MAC/Vendor mapping files (IEEE OUI, IEEE IAB or custom) are not
	  specified on the command line with the appropriate option, then
	  look for them in the current directory before looking in the system
	  wide location.

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

	* check-decode: Updated patterns to reflect vendor name changes in
	  latest IEEE OUI file.

2011-12-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version to 1.8.2

2011-09-27 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.h, arp-scan.c, arp-scan.1: Added new option --rtt (-D) to
          calculate and display the packet round-trip time.

2011-08-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.h, arp-scan.1: Raised default timeout from 100ms to 500ms.
	  It is suspected that the default timeout is too short in some
	  situations, and this may be one of the causes of duplicate responses.

	* arp-scan.h, link-bpf.c: Include <net/bpf.h> before arp-scan.h in
	  link-bpf.c, and remove conditional inclusion of <net/bpf.h> in
	  arp-scan.h. This causes <net/bpf.h> to be included before <pcap.h>
	  on all systems that use BPF, e.g. BSD and MacOS. This should prevent
	  the problems that occur on some of these systems, and remove the need
	  for conditional inclusion to prevent them.
